z-index issue with feed switch

--- a/_sass/feed.scss
+++ b/_sass/feed.scss
@@ -210,6 +210,8 @@ The first (most recent) post in the list is styled to be bigger than the others 
     text-align: right;
     margin-bottom: 25px;
     margin-top: -81px;
+    position: relative;
+    z-index: 1;
     @media (max-width: $small-screen-breakpoint) {
         display: none !important;
     }
